--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
      
         <div>
-            <h2>Guest</h2>
+            <h2>Away</h2>
             <div id="guest-scr" class="scr-board">0</div>
             <div class="btn-contain">
                 <button class="btn" onclick="guestBonus1()">+1</button>
