updated scoreboard headers

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div>
-            <h2>Home</h2>
+            <h2>Team 1</h2>
             <div id="home-scr" class="scr-board">0</div>
             <div class="btn-contain">
                 <button class="btn" onclick="homeBonus1()">+1</button>
@@ -22,7 +22,7 @@
         </div>
      
         <div>
-            <h2>Away</h2>
+            <h2>Team 2</h2>
             <div id="guest-scr" class="scr-board">0</div>
             <div class="btn-contain">
                 <button class="btn" onclick="guestBonus1()">+1</button>
